Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Baifei.GitHub.io</h1>
-      <h2 class="project-tagline">hexo_test</h2>
+      <h2 class="project-tagline">baifei</h2>
     </section>
 
     <section class="main-content">
