--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Baifei.GitHub.io</h1>
-      <h2 class="project-tagline">baifei</h2>
-      <h2 class="project-tagline"><a href="http://baifei.github.io/myblog/" target=_blank style="color:#ccc">to myblog</a></h2>
+      <h2 class="project-tagline">baifei<a href="http://baifei.github.io/myblog/" target=_blank style="color:#ccc">中文</a></h2>
+      
     </section>
 
     <section class="main-content">
